replaced mystery with Edward and fixed icons appearing italic

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <style>
+        i {
+            font-style: normal;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -225,20 +230,30 @@
                         <div class="columns">
                             <div class="column is-one-quarter">
                                 <figure class="image">
-                                    <img class="is-rounded" src="./assets/mystery.jpg">
+                                    <img class="is-rounded" src="./assets/edward.jpg">
                                 </figure>
                             </div>
                             <div class="column">
                                 <div class="is-flex is-justify-content-space-between pb-1">
-                                    <h4 class="subtitle has-text-weight-bold mb-1">You</h4>
-                                    <div></div>
+                                    <h4 class="subtitle has-text-weight-bold mb-1">Edward-Christian Marin</h4>
+                                    <div>
+                                        <a class="has-text-link" href="https://www.linkedin.com/in/edwardchristianmarin/">
+                                            <span class="icon">
+                                              <i class="fa-brands fa-linkedin"></i>
+                                            </span>
+                                        </a>
+                                    </div>
                                 </div>
                                 <p>
-                                    Interested in joining the team? This could be you.
+                                    I have over two years of experience working as a Web Developer on the University
+                                    of Kent's Web Solutions Team and just over a year of experience as a Software
+                                    Engineer at Hiscox Insurance where I completed my placement year. When I’m not
+                                    fixing bugs, I enjoy playing competitive games (especially FPS) and keeping active.
                                 </p>
                             </div>
                         </div>
-                        <p class="pt-1"></p>
+                        <hr class="my-3">
+                        <p class="pt-1">Javascript, Python, PHP, C#, AngularJs, SQL</p>
                     </div>
                 </div>
             </div>
